# TripMate-AI---Trip-planner-agent-using-Langgraph

./: README.md  app.py  backend.py  dockerfile  main.py  pyproject.toml  requirements.txt
static/: script.js  style.css
templates/: index.html
tools/: flight_tool.py  tavily_tool.py
